# LiveQML

./: CMakeLists.txt
QLive/src/: httpserver.cpp  httpserver.h  qlive.cpp  qlive.h
QLive/src/core/: network.cpp  network.h
android/: AndroidManifest.xml
assets/: resources.qrc
assets/qml/: ErrorPage.qml
build-open_ssl-Android_Qt_6_5_1_Clang_arm64_v8a-Debug/: CMakeCache.txt.prev
open_ssl/: CMakeLists.txt
server/: Main.qml  Settings.qml  qmldir
server/Base/: Header.qml
server/Pages/: HomePage.qml
sources/: main.cpp
